add check for port of podmonitor

--- a/broken-example.yml
+++ b/broken-example.yml
@@ -485,7 +485,7 @@ metadata:
 spec:
   podMetricsEndpoints:
   - path: /metrics
-    port: flower
+    port: thisportdoesnotexist
   podTargetLabels:
   - app
   - env
