--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -5,7 +5,8 @@ on:
 
 jobs:
   deno-lint:
-    runs-on: [self-hosted, ubuntu20.04-self]
+    runs-on:
+      group: ubuntu-runners
     steps:
       - uses: actions/checkout@v2
       - uses: denoland/setup-deno@v1
@@ -15,7 +16,8 @@ jobs:
       - run: deno lint
 
   deno-test:
-    runs-on: [self-hosted, ubuntu20.04-self]
+    runs-on:
+      group: ubuntu-runners
     steps:
       - uses: actions/checkout@v2
       - uses: denoland/setup-deno@v1
