--- a/.github/actions/kuberc/action.yml
+++ b/.github/actions/kuberc/action.yml
@@ -25,7 +25,7 @@ runs:
       name: cache deno installation and deno.land dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-kuberc-deno-${{ hashFiles('**/*') }}
+        key: ${{ runner.os }}-kuberc-deno
         restore-keys: ${{ runner.os }}-deno-
         path: |
           /home/runner/.deno
